--- a/master/app/views/layouts/master.html
+++ b/master/app/views/layouts/master.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name='description' >
-    <title><%= title %></title>
+    <title>Master JS Framework</title>
     <%- html.renderStyles() %>
 
     <!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
