--- a/component/app/views/layouts/master.html
+++ b/component/app/views/layouts/master.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name='description' >
     <title>Master JS Framework</title>
-    <%- html.renderStyles() %>
+    ${ html.renderStyles() }
 
     <!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
     <!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
@@ -17,8 +17,8 @@
   </head>
 
   <body>
-    <%- yield %>
-    <%- html.renderScripts() %>
+    ${ yield }
+    ${ html.renderScripts() }
     <script src="/socket.io/socket.io.js"></script>
   </body>
 
